--- a/layout/base/tests/test_reftests_with_caret.html
+++ b/layout/base/tests/test_reftests_with_caret.html
@@ -104,7 +104,6 @@ var tests = [
     [ 'bug632215-1.html' , 'bug632215-ref.html'   ] ,
     [ 'bug632215-2.html' , 'bug632215-ref.html'   ] ,
     [ 'bug633044-1.html' , 'bug633044-1-ref.html' ] ,
-    [ 'bug644428-1.html' , 'bug644428-1-ref.html' ] ,
 ];
 
 if (!isWindows) {
@@ -128,6 +127,7 @@ if (!isWindows) {
   tests.push([ 'bug613433-3.html' , 'bug613433-ref.html' ]);   // bug 681332
   tests.push([ 'bug613807-1.html' , 'bug613807-1-ref.html' ]); // bug 680574
   tests.push([ 'bug634406-1.html' , 'bug634406-1-ref.html' ]); // bug 681146
+  tests.push([ 'bug644428-1.html' , 'bug644428-1-ref.html' ]); // bug 689435
 }
 
 tests.push(function() {SpecialPowers.setBoolPref("bidi.browser.ui", true);});
