Bug 1571444 - Show a message in the sidebar when the search returns 0 results. r=MattN,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D43312

--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -98,6 +98,10 @@
           <p data-l10n-id="login-list-intro-title"></p>
           <span data-l10n-id="login-list-intro-description"></span>
         </div>
+        <div class="empty-search-message">
+          <p data-l10n-id="about-logins-login-list-empty-search-title"></p>
+          <span data-l10n-id="about-logins-login-list-empty-search-description"></span>
+        </div>
       </div>
       <button class="create-login-button" data-l10n-id="create-login-button"></button>
     </template>
