Bug 1572569 - Replace 'Send Feedback' with 'Help' in the about:logins menu. r=MattN,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D43150

--- a/browser/components/aboutlogins/tests/chrome/test_menu_button.html
+++ b/browser/components/aboutlogins/tests/chrome/test_menu_button.html
@@ -123,7 +123,7 @@ add_task(async function test_menu_keyboard_cycling() {
 
   let allItems = [
     "menuitem-preferences",
-    "menuitem-feedback",
+    "menuitem-help",
     "menuitem-faq",
     "menuitem-mobile-android",
     "menuitem-mobile-ios",
