Bug 1567548 - Remove references to Lockwise FAQ page. r=jaws,fluent-reviewers,flod
Differential Revision: https://phabricator.services.mozilla.com/D43895

--- a/browser/components/aboutlogins/content/aboutLogins.html
+++ b/browser/components/aboutlogins/content/aboutLogins.html
@@ -130,8 +130,8 @@
         <ul>
           <li data-l10n-id="login-intro-instruction-fxa"></li>
           <li data-l10n-id="login-intro-instruction-fxa-settings"></li>
-          <li data-l10n-id="login-intro-instruction-faq">
-            <a data-l10n-name="faq" class="intro-faq-link" href="#"></a>
+          <li data-l10n-id="about-logins-intro-instruction-help">
+            <a data-l10n-name="help-link" class="intro-help-link" href="#"></a>
           </li>
         </ul>
       </section>
@@ -235,7 +235,6 @@
         <button role="menuitem" class="menuitem-button menuitem-preferences ghost-button" data-event-name="AboutLoginsOpenPreferences" data-l10n-id="menu-menuitem-preferences"></button>
         <hr role="separator" class="menuitem-separator"></hr>
         <button role="menuitem" class="menuitem-button menuitem-help ghost-button" data-event-name="AboutLoginsGetHelp" data-l10n-id="about-logins-menu-menuitem-help"></button>
-        <button role="menuitem" class="menuitem-button menuitem-faq ghost-button" data-event-name="AboutLoginsOpenFAQ" data-l10n-id="menu-menuitem-faq"></button>
         <hr role="separator" class="menuitem-separator"></hr>
         <button role="menuitem" class="menuitem-button menuitem-mobile menuitem-mobile-android ghost-button" data-event-name="AboutLoginsOpenMobileAndroid" data-l10n-id="menu-menuitem-android-app"></button>
         <button role="menuitem" class="menuitem-button menuitem-mobile menuitem-mobile-ios ghost-button" data-event-name="AboutLoginsOpenMobileIos" data-l10n-id="menu-menuitem-iphone-app"></button>
