Bug 1580307 - Avoid justify-items from the cached scrollbar assertions. r=heycam
justify-items' initial value is `legacy` and the computed value depends on the
parent's value.

We don't use flex / grid in the scrollbars, so just avoid asserting about this
property.

Differential Revision: https://phabricator.services.mozilla.com/D45673

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -66,6 +66,13 @@ scrollcorner, resizer, scrollbar, scrollbarbutton, slider {
    */
   font: 16px sans-serif;
 
+  /* The initial value of justify-items is `legacy`, which makes it depend on
+   * the parent style.
+   *
+   * Reset it to something else.
+   */
+  justify-items: start;
+
   /* Duplicate the rules from the '*' rule above, which were clobbered by the
    * 'all: initial' declaration.
    *
