Bug 1579602 - Rename nsMathMLElement to dom::MathMLElement. r=bzbarsky
This commit renames nsMathMLElement/nsMathMLElementFactory classes into
MathMLElement/MathMLElementFactory and moves the former into the mozilla::dom
namespace. This is a preliminary step to introduce MathML DOM (bug 1579602).
Code behavior is not changed.

Differential Revision: https://phabricator.services.mozilla.com/D45128

--- a/layout/mathml/mathml.css
+++ b/layout/mathml/mathml.css
@@ -72,7 +72,7 @@ ms[rquote]:after {
 /* attributes common to all tags                                          */
 /**************************************************************************/
 
-/* These attributes are mapped to style in nsMathMLElement.cpp:
+/* These attributes are mapped to style in MathMLElement.cpp:
 
    - background -> background                             (deprecated)
    - color -> color                                       (deprecated)
