--- a/browser/themes/shared/urlbar-autocomplete.inc.css
+++ b/browser/themes/shared/urlbar-autocomplete.inc.css
@@ -379,8 +379,7 @@
 
 /* Search one-offs. */
 #urlbar .search-one-offs {
-  display: flex;
-  align-items: start;
+  -moz-box-orient: horizontal;
   padding-block: 16px;
 }
 
@@ -399,24 +398,15 @@
 
 #urlbar .search-panel-header {
   padding: 0;
-  min-height: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-#urlbar .search-panel-one-offs-header-label {
-  margin: 0;
 }
 
 #urlbar .searchbar-engine-one-off-item {
   min-width: 32px;
   height: 32px;
   margin: 0 4px;
-}
-
-#urlbar .search-one-offs-spacer {
-  flex-grow: 1;
 }
 
 /* search bar popup */
