Bug 1534455 - Convert autocomplete binding to a customized input element. r=dao,bgrins
Differential Revision: https://phabricator.services.mozilla.com/D33250

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -47,9 +47,12 @@
 
 .searchbar-textbox {
   -moz-appearance: none;
+  -moz-box-flex: 1;
   background: none;
   color: inherit;
-  margin: 0;
+  border: none;
+  font: inherit;
+  margin: 0 !important; /* override autocomplete.css */
 }
 
 #urlbar:hover,
