--- a/toolkit/themes/linux/global/autocomplete.css
+++ b/toolkit/themes/linux/global/autocomplete.css
@@ -11,7 +11,11 @@
 
 /* ::::: autocomplete ::::: */
 
-textbox[nomatch="true"][highlightnonmatches="true"] {
+html|input[is="autocomplete-input"] {
+  margin: 2px 4px; /* matches xul <textbox> default margin */
+}
+
+html|input[nomatch="true"][highlightnonmatches="true"] {
   color: red;
 }
 
