--- a/toolkit/themes/osx/global/autocomplete.css
+++ b/toolkit/themes/osx/global/autocomplete.css
@@ -5,7 +5,11 @@
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 @namespace html url("http://www.w3.org/1999/xhtml");
 
-textbox[nomatch="true"][highlightnonmatches="true"] {
+html|input[is="autocomplete-input"] {
+  margin: 4px; /* matches xul <textbox> default margin */
+}
+
+html|input[nomatch="true"][highlightnonmatches="true"] {
   color: red;
 }
 
