Backed out changeset e859a5aebb5b (bug 1534455) for causing failures at test_bug437844.xul

--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -47,12 +47,9 @@
 
 .searchbar-textbox {
   -moz-appearance: none;
-  -moz-box-flex: 1;
   background: none;
   color: inherit;
-  border: none;
-  font: inherit;
-  margin: 0 !important; /* override autocomplete.css */
+  margin: 0;
 }
 
 #urlbar:hover,
