--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -79,9 +79,9 @@ strong {
 
 .devtools-tooltip-inactive-css {
   color: var(--theme-arrowpanel-color);
-  padding: 7px 14px 9px;
-  font-size: 12px;
   margin: 0;
+  padding: 10px 14px 12px 14px;
+  font-size: 12px;
 }
 
 .devtools-tooltip-inactive-css,
@@ -268,9 +268,9 @@ strong {
 /* Tooltip : doorhanger style */
 
 .tooltip-container[type="doorhanger"] > .tooltip-panel {
-  padding: 2px 0;
   color: var(--theme-arrowpanel-color);
-  margin: 4px;
+  margin: 0;
+  padding: 0;
   max-width: 320px;
 }
 
@@ -349,24 +349,9 @@ strong {
   margin-left: calc(var(--overhang) + var(--shadow-margin));
 }
 
-.tooltip-container[type="doorhanger"].tooltip-top > .tooltip-panel {
-  /*
-   * Drop the margin between the doorhanger and the arrow and add extra
-   * padding.
-   */
-  margin-bottom: 0;
-  padding-top: 6px;
-  padding-bottom: 2px;
-}
-
-.tooltip-container[type="doorhanger"].tooltip-bottom > .tooltip-panel {
-  /*
-   * Drop the margin between the doorhanger and the arrow and add extra
-   * padding.
-   */
-  margin-top: 0;
-  padding-top: 6px;
-  padding-bottom: 6px;
+.tooltip-container[type="doorhanger"] .menu-standard-padding {
+  margin: 0;
+  padding: 6px 0;
 }
 
 .tooltip-container[type="doorhanger"].tooltip-top > .tooltip-arrow {
