--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -558,16 +558,11 @@ toolbarbutton[constrain-size="true"][cui-areatype="menu-panel"] > .toolbarbutton
   -moz-box-align: center;
 }
 
-#appMenu-fxa-avatar,
-#fxa-menu-account-fxa-avatar {
+#appMenu-fxa-avatar {
   pointer-events: none;
   list-style-image: var(--avatar-image-url);
   -moz-context-properties: fill;
   fill: currentColor;
-}
-
-#PanelUI-fxa-menu-account-signout-button {
-  list-style-image: url(chrome://browser/skin/sign-out.svg);
 }
 
 /* Handle different UI states. */
@@ -715,8 +710,7 @@ toolbarbutton[constrain-size="true"][cui-areatype="menu-panel"] > .toolbarbutton
 }
 
 #fxa-menu-avatar,
-#fxa-avatar-image,
-#PanelUI-fxa-menu-account-settings-button {
+#fxa-avatar-image {
   list-style-image: var(--avatar-image-url);
 }
 
@@ -1385,7 +1379,6 @@ menuitem.panel-subview-footer@menuStateActive@,
 }
 
 #appMenu-fxa-avatar,
-#fxa-menu-account-fxa-avatar,
 #appMenu-fxa-label > .toolbarbutton-icon,
 #PanelUI-containersItems > .subviewbutton > .toolbarbutton-icon,
 #PanelUI-remotetabs-tabslist > toolbarbutton[itemtype="tab"] > .toolbarbutton-icon,
@@ -1396,8 +1389,7 @@ menuitem.panel-subview-footer@menuStateActive@,
   height: 16px;
 }
 
-#appMenu-fxa-avatar,
-#PanelUI-fxa-menu-account-settings-button > .toolbarbutton-icon {
+#appMenu-fxa-avatar {
   border-radius: 50%;
 }
 
