Bug 1582316 - Fix CSS broken by un-blockification of display: -moz-box - round 2. r=jaws
Differential Revision: https://phabricator.services.mozilla.com/D46497

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -116,6 +116,7 @@ panelview[mainview] > .panel-header {
 }
 
 .panel-viewcontainer.offscreen {
+  display: block;
   position: absolute;
 }
 
@@ -199,7 +200,7 @@ panelview[mainview] > .panel-header {
 
 #tabbrowser-tabs[positionpinnedtabs] > .tabbrowser-arrowscrollbox > .tabbrowser-tab[pinned] {
   position: fixed !important;
-  display: block; /* position:fixed already does this (bug 579776), but let's be explicit */
+  display: block;
 }
 
 #tabbrowser-tabs[movingtab] > .tabbrowser-arrowscrollbox > .tabbrowser-tab[selected],
@@ -498,6 +499,7 @@ toolbarpaletteitem[place="palette"] > #personal-bookmarks > #bookmarks-toolbar-b
 }
 
 #PlacesToolbarDropIndicatorHolder {
+  display: block;
   position: absolute;
 }
 
@@ -918,6 +920,7 @@ browser[tabmodalPromptShowing] {
 /* Status panel */
 
 #statuspanel {
+  display: block;
   position: fixed;
   margin-top: -3em;
   max-width: calc(100% - 5px);
