Bug 1482778 - Include captions within table outlines. r=dbaron
Differential Revision: https://phabricator.services.mozilla.com/D45802

--- a/layout/style/res/ua.css
+++ b/layout/style/res/ua.css
@@ -60,6 +60,7 @@
   grid-row-start: inherit;
   grid-row-end: inherit;
   order: inherit;
+  outline: inherit;
   column-span: inherit; /* needed if <table> has "column-span:all" */
   contain: inherit; /* needed if table has 'contain:layout' or 'paint' */
 }
