Bug 1587602 - Source footer - the loading icon shown when pretty-printing a source is static and misaligned. r=fvsch
Differential Revision: https://phabricator.services.mozilla.com/D48939

--- a/devtools/client/debugger/src/components/shared/AccessibleImage.css
+++ b/devtools/client/debugger/src/components/shared/AccessibleImage.css
@@ -171,6 +171,10 @@ html[dir="rtl"] .img.more-tabs {
   mask-image: url(resource://devtools/client/debugger/images/help.svg);
 }
 
+.img.spin {
+  animation: spin 0.5s linear infinite;
+}
+
 .img.stepIn {
   mask-image: url(resource://devtools/client/debugger/images/stepIn.svg);
 }
