Bug 1589233 - Align CodeMirror line-height with Debugger in Inspector, Style Editor and Console editor; r=gl,nchevobbe
We have a few CodeMirror instances where we're using the default line height (`line-height: normal`), resulting in a line-height in the 13-14.5px range (depending on the font, OS, resolution). By contrast, the Debugger uses 15px explictly, and that's a style we're trying to generalize.

This patch sets a 15px line-height for:
- Inspector: the CodeMirror instance used in the markup view for "Edit as HTML" and in event tooltips
- Style Editor: the main editor instance
- Console: the jsterm but only in editor mode (since the output uses a 14px line-height on purpose, the jsterm in standard mode keeps this 14px line-height to minimize visual jumps when sending a command)

Differential Revision: https://phabricator.services.mozilla.com/D49593

--- a/devtools/client/shared/sourceeditor/codemirror/mozilla.css
+++ b/devtools/client/shared/sourceeditor/codemirror/mozilla.css
@@ -139,6 +139,7 @@
 .CodeMirror-foldgutter-open,
 .CodeMirror-foldgutter-folded {
   height: 14px;
+  margin-top: 1px;
   background-image: url("chrome://devtools/skin/images/arrow.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -253,4 +254,12 @@
 /* Override the background-color: white applied to filler elements in codemirror.css */
 .CodeMirror-scrollbar-filler, .CodeMirror-gutter-filler {
   -moz-appearance: scrollcorner;
+}
+
+/* Markup view and Event tooltip styles */
+
+.CodeMirror.cm-s-markup-view pre {
+  font-size: var(--theme-code-font-size);
+  line-height: var(--theme-code-line-height);
+  min-height: 15px;
 }
