Bug 1567175, make LoginManagerContent and LoginManagerParent JS classes,r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D47823

--- a/toolkit/components/passwordmgr/test/mochitest/test_formless_submit.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_formless_submit.html
@@ -156,7 +156,7 @@ add_task(async function test() {
 
     info("Calling _onFormSubmit with FormLike");
     let processedPromise = getSubmitMessage();
-    LoginManagerContent._onFormSubmit(formLike);
+    LoginManagerContent.forWindow(frameDoc.defaultView)._onFormSubmit(formLike);
 
     let submittedResult = await processedPromise;
 
