Bug 1567175, rename LoginManagerContent to LoginManagerChild, r=MattN
Differential Revision: https://phabricator.services.mozilla.com/D47824

--- a/toolkit/components/passwordmgr/test/mochitest/test_LoginManagerContent_generatedPasswordFilledOrEdited.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_LoginManagerContent_generatedPasswordFilledOrEdited.html
@@ -41,7 +41,7 @@ function preventDefaultAndStopProgagation(event) {
 <div id="content" style="display: none"></div>
 <pre id="test"></pre>
 <script>
-const { LoginManagerContent } = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerContent.jsm", {});
+const { LoginManagerChild } = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerChild.jsm", {});
 
 add_task(async function setup() {
   await SpecialPowers.pushPrefEnv({"set": [
@@ -62,7 +62,7 @@ add_task(async function test_preventDefaultAndStopPropagation() {
 
   SpecialPowers.wrap(pword).setUserInput("generatedpass");
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "Before first fill");
-  LoginManagerContent.forWindow(window)._generatedPasswordFilledOrEdited(pword);
+  LoginManagerChild.forWindow(window)._generatedPasswordFilledOrEdited(pword);
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, false, "After first fill");
   synthesizeKey("KEY_Tab"); // blur
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "After blur");
@@ -80,7 +80,7 @@ add_task(async function test_fieldsMaskedAfterSavedLoginFill() {
 
   SpecialPowers.wrap(pword).setUserInput("generatedpass");
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "Before first fill");
-  LoginManagerContent.forWindow(window)._generatedPasswordFilledOrEdited(pword);
+  LoginManagerChild.forWindow(window)._generatedPasswordFilledOrEdited(pword);
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, false, "After first fill");
   synthesizeKey("KEY_Tab", { shiftKey: true }); // blur pw, focus un
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "After blur");
@@ -105,7 +105,7 @@ add_task(async function test_fieldsMaskedAfterReplacingWholeValue() {
 
   SpecialPowers.wrap(pword).setUserInput("generatedpass");
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "Before first fill");
-  LoginManagerContent.forWindow(window)._generatedPasswordFilledOrEdited(pword);
+  LoginManagerChild.forWindow(window)._generatedPasswordFilledOrEdited(pword);
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, false, "After first fill");
   synthesizeKey("KEY_Tab", { shiftKey: true }); // blur pw, focus un
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "After blur");
@@ -132,7 +132,7 @@ add_task(async function test_fieldsUnmaskedAfterAddingCharacter() {
 
   SpecialPowers.wrap(pword).setUserInput("generatedpass");
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "Before first fill");
-  LoginManagerContent.forWindow(window)._generatedPasswordFilledOrEdited(pword);
+  LoginManagerChild.forWindow(window)._generatedPasswordFilledOrEdited(pword);
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, false, "After first fill");
   synthesizeKey("KEY_Tab", { shiftKey: true }); // blur pw, focus un
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "After blur");
@@ -160,7 +160,7 @@ add_task(async function test_typeNotPassword() {
 
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, true, "Before first fill");
   SpecialPowers.wrap(pword).setUserInput("generatedpass");
-  LoginManagerContent.forWindow(window)._generatedPasswordFilledOrEdited(pword);
+  LoginManagerChild.forWindow(window)._generatedPasswordFilledOrEdited(pword);
   LOGIN_FIELD_UTILS.checkPasswordMasked(pword, false, "After first fill");
 
   // Simulate a website doing their own unmasking and re-masking
