--- a/toolkit/components/passwordmgr/test/mochitest/test_formless_submit.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_formless_submit.html
@@ -10,8 +10,8 @@
 <body>
 <script type="application/javascript">
 const {LoginFormFactory} = SpecialPowers.Cu.import("resource://gre/modules/LoginFormFactory.jsm");
-const LMCBackstagePass = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerContent.jsm");
-const { LoginManagerContent } = LMCBackstagePass;
+const LMCBackstagePass = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerChild.jsm");
+const { LoginManagerChild } = LMCBackstagePass;
 
 function loadFrame() {
   return new Promise(resolve => {
@@ -156,7 +156,7 @@ add_task(async function test() {
 
     info("Calling _onFormSubmit with FormLike");
     let processedPromise = getSubmitMessage();
-    LoginManagerContent.forWindow(frameDoc.defaultView)._onFormSubmit(formLike);
+    LoginManagerChild.forWindow(frameDoc.defaultView)._onFormSubmit(formLike);
 
     let submittedResult = await processedPromise;
 
