--- a/toolkit/components/passwordmgr/test/mochitest/test_munged_username.html
+++ b/toolkit/components/passwordmgr/test/mochitest/test_munged_username.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <script type="application/javascript">
-const LMCBackstagePass = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerContent.jsm");
-const { LoginManagerContent } = LMCBackstagePass;
+const LMCBackstagePass = SpecialPowers.Cu.import("resource://gre/modules/LoginManagerChild.jsm");
+const { LoginManagerChild } = LMCBackstagePass;
 
 let readyPromise = registerRunTests();
 
